[gd_scene load_steps=20 format=3 uid="uid://b0a1s4bo3krrq"]

[ext_resource type="Script" path="res://Scenes/UI/MainUI/MainUI.gd" id="1_ceh7a"]
[ext_resource type="Theme" uid="uid://weq3a2i0088l" path="res://Assets/main.tres" id="1_jpkjh"]
[ext_resource type="Texture2D" uid="uid://d044xdjie3itn" path="res://Assets/Sprites/UI/Time/0_dawn.png" id="1_wvaqh"]
[ext_resource type="Texture2D" uid="uid://1lmhmvymosvg" path="res://Assets/Sprites/UI/notification_side.png" id="2_nsvoo"]
[ext_resource type="Texture2D" uid="uid://ph6daoxf2yxl" path="res://Assets/Sprites/coin.png" id="3_46gjx"]
[ext_resource type="Texture2D" uid="uid://2k6nqpcq07p7" path="res://Assets/Sprites/UI/Time/1_day.png" id="3_wulcp"]
[ext_resource type="Texture2D" uid="uid://c3at7breygjan" path="res://Assets/Sprites/UI/Time/2_afternoon.png" id="4_ge8ua"]
[ext_resource type="Texture2D" uid="uid://c8uqnubygnygv" path="res://Assets/Sprites/UI/Time/3_night.png" id="5_eg4pa"]
[ext_resource type="Texture2D" uid="uid://c3mqscmef7fmm" path="res://Assets/Sprites/UI/invisibility_potion_holder.png" id="8_3ndqy"]
[ext_resource type="Texture2D" uid="uid://dbdl25mk20m16" path="res://Assets/Sprites/potions/purple-potion.png" id="10_mae88"]
[ext_resource type="PackedScene" uid="uid://dmw8pi86flogu" path="res://Scenes/UI/StartDay/StartDayUI.tscn" id="11_no0r0"]
[ext_resource type="PackedScene" uid="uid://b23bdnonslpmq" path="res://Scenes/UI/EndDay/EndDayUI.tscn" id="12_pdjk2"]
[ext_resource type="PackedScene" uid="uid://dq3e1l424jqhp" path="res://Components/Audio/AudioComponent.tscn" id="13_h3w5m"]
[ext_resource type="AudioStream" uid="uid://bwwl6n8njtmhy" path="res://Assets/Audio/Invisibility/PotionUse1.mp3" id="14_a1dc5"]
[ext_resource type="AudioStream" uid="uid://cob22hqmr7i8a" path="res://Assets/Audio/Invisibility/PotionUse2.mp3" id="15_dhc1k"]
[ext_resource type="AudioStream" uid="uid://cgmuqrfbaggr2" path="res://Assets/Audio/Invisibility/PotionUse3.mp3" id="16_ddpi4"]
[ext_resource type="AudioStream" uid="uid://bkl1lmfnwbqgb" path="res://Assets/Audio/Invisibility/PotionUse4.mp3" id="17_m5p6k"]
[ext_resource type="AudioStream" uid="uid://dprj5cffgucw1" path="res://Assets/Audio/Invisibility/PotionUse5.mp3" id="18_w0dgp"]
[ext_resource type="AudioStream" uid="uid://xg1t2uy2bngu" path="res://Assets/Audio/Invisibility/PotionUse6.mp3" id="19_1j3qy"]

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_jpkjh")
script = ExtResource("1_ceh7a")
time_textures = Array[Texture2D]([ExtResource("1_wvaqh"), ExtResource("3_wulcp"), ExtResource("4_ge8ua"), ExtResource("5_eg4pa")])

[node name="MoneyPaper" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -212.0
offset_right = 76.0017
offset_bottom = 96.0
grow_horizontal = 0
texture = ExtResource("2_nsvoo")
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MoneyPaper"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -39.0
offset_right = 171.0
offset_bottom = 21.0001
grow_vertical = 2
alignment = 1

[node name="CoinTextureRect" type="TextureRect" parent="MoneyPaper/HBoxContainer"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_46gjx")
expand_mode = 3

[node name="MoneyLabel" type="Label" parent="MoneyPaper/HBoxContainer"]
modulate = Color(0.259294, 0.259294, 0.259294, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "100"
vertical_alignment = 1

[node name="DayPaper" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -120.0
offset_right = 168.0
offset_bottom = 80.0
texture = ExtResource("2_nsvoo")
stretch_mode = 4
flip_h = true

[node name="DayLabel" type="Label" parent="DayPaper"]
modulate = Color(0.259294, 0.259294, 0.259294, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -20.0
offset_right = -67.9999
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Day 1
"
vertical_alignment = 1

[node name="TimeIndicator" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -72.0
offset_right = 150.0
offset_bottom = 47.9985
grow_vertical = 0
texture = ExtResource("1_wvaqh")
stretch_mode = 4

[node name="InvisibilityButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Use Invisibility"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_3ndqy")
stretch_mode = 0

[node name="InvisibilityPotionTexture" type="TextureRect" parent="InvisibilityButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_mae88")
expand_mode = 2

[node name="StartDayUi" parent="." instance=ExtResource("11_no0r0")]
layout_mode = 1

[node name="EndDayUi" parent="." instance=ExtResource("12_pdjk2")]
visible = false
layout_mode = 1

[node name="AudioComponent" parent="." instance=ExtResource("13_h3w5m")]
audio_clips = Array[AudioStream]([ExtResource("14_a1dc5"), ExtResource("15_dhc1k"), ExtResource("16_ddpi4"), ExtResource("17_m5p6k"), ExtResource("18_w0dgp"), ExtResource("19_1j3qy")])

[connection signal="pressed" from="InvisibilityButton" to="." method="_on_invisibility_button_pressed"]
[connection signal="start_day_pressed" from="StartDayUi" to="." method="_on_start_day_pressed"]
[connection signal="next_day_pressed" from="EndDayUi" to="." method="_on_next_day_pressed"]
